Fix hamburger menu wraps on smaller screens

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -771,7 +771,7 @@ a {
   padding-right: .5rem;
 }
 .cid-s48OLK6784 .navbar-caption {
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
@@ -1254,7 +1254,7 @@ a {
   padding-right: .5rem;
 }
 .cid-s48OLK6784 .navbar-caption {
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
@@ -1710,7 +1710,7 @@ a {
   padding-right: .5rem;
 }
 .cid-s48OLK6784 .navbar-caption {
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
@@ -2193,7 +2193,7 @@ a {
   padding-right: .5rem;
 }
 .cid-s48OLK6784 .navbar-caption {
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
